// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots should redirect if there is an error 1`] = `
<div>
  Error because Redirect
</div>
`;

exports[`Snapshots should render details Create correctly 1`] = `
Array [
  <div>
    Metas
  </div>,
  <div
    className="CRUD-details__content"
  >
    <div>
      Create
    </div>
  </div>,
]
`;

exports[`Snapshots should render details Read correctly 1`] = `
Array [
  <div>
    Metas
  </div>,
  <div
    className="CRUD-details__content"
  >
    <div>
      Read
    </div>
  </div>,
]
`;

exports[`Snapshots should render details Update correctly 1`] = `
Array [
  <div>
    Metas
  </div>,
  <div
    className="CRUD-details__content"
  >
    <div>
      update
    </div>
  </div>,
]
`;

exports[`Snapshots should render loading correctly 1`] = `
Array [
  <div>
    Metas
  </div>,
  <div
    className="CRUD-details__content"
  >
    <div>
      Loading
    </div>
  </div>,
]
`;
